--- a/style.css
+++ b/style.css
@@ -1,2 +1,130 @@
-h1 {background-color: blue
+* {
+    box-sizing: border-box;
 }
+
+body {
+    direction: rtl;
+    text-align: right;
+    font-family: "Arial (Hebrew)", Arial;
+
+}
+
+/* there should be positioning: 
+1. paz logo 
+2. search
+3. footer
+4. text on image
+5. drop down
+*/
+
+.header {
+  width: 100%;
+  height: 105px;
+  position: relative;
+  background-color: rgb(144, 144, 144);
+  z-index: 100;
+}
+
+a.logo {
+  display: block;
+  width: 142px;
+  height: 93px;
+  position: absolute;
+  bottom: -20px;
+  right: -8px;
+  background-image: url("images\images\paz_logo.png");
+}
+
+form.search-box button {
+  margin:auto;
+  padding: 5px;
+  max-width: 25px;
+  float: left;
+  color: grey;
+  font-size: 14px;
+  cursor: pointer;
+}
+
+form.search-box input[type=text] {
+  padding: 10px;
+  font-size: 14px;
+  border: 1px solid grey;
+  float: left;
+  width: 132px;
+  height: 30px;
+  background: #f1f1f1;
+}
+
+.search-box button:hover {
+  background: white;
+}
+
+form.search-box::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
+#mainMenu {
+  height: 33px;
+  position: relative;
+  top: 72px;
+  margin: 0 143px 0 0;
+}
+
+nav > ul {
+    list-style-type: none;
+    margin: 0;
+    align-items: center;
+    overflow: hidden;
+    background-color: rgb(144, 144, 144);
+  }
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: rgb(144, 144, 144);
+  min-width: 150px;
+  box-shadow: 0px 8px 8px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+  .dropdown-content a {
+    color: white;
+    text-decoration: none;
+    background-color: rgb(144, 144, 144);
+    padding: 5px 15px;
+    display: block;
+  }
+
+  li.dropdown {
+    display: inline-block;
+  }
+
+  .dropbtn {
+    display: inline-block;
+    color: white;
+    text-align: right;
+    padding: 14px;
+    min-width: 150px;
+    text-decoration: none;
+  }
+ 
+  li a:hover, .dropdown:hover .dropbtn {
+    background-color:lightgrey;
+    color: black;
+  }
+  
+  .dropdown a {
+    color: white;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: right;
+  }
+  
+  .dropdown-content a:hover {background-color: #f1f1f1;}
+  
+  .dropdown:hover .dropdown-content {
+    display: block;
+  }
