--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ body {
 }
 
 .header {
-  width: 900px;
+  width: 100%;
   height: 106px;
   font-weight: bold;
   color: #005ca0;
@@ -37,7 +37,7 @@ background: linear-gradient(to bottom, #79757C 0%, #DCE0E0 100%);
   z-index: 100;
 }
 
-a.logo {
+.logo {
   display: block;
   width: 142px;
   height: 93px;
@@ -47,12 +47,12 @@ a.logo {
   background-image: url("images/images/paz_logo.png");
 }
 
-a.home {
-  display: inline-block;
+#home {
+  display: block;
   background-position: -17px top;
-  width: 17px;
-  background-image: url("images/images/menu_home2.png") no-repeat 0 top;
+  width: 100px;
   position: absolute;
+  background-image: url(/images/images/menu_home.png) 
 }
 
 .form-search {
@@ -99,6 +99,7 @@ form.search-box::after {
 
 #mainMenu > ul {
     list-style-type: none;
+    display: flex;
     overflow: hidden;
     height: 33px;
     position: relative;
@@ -134,7 +135,7 @@ li > #sep {
     display: inline-block;
   }
 
-  .dropbtn {
+.dropbtn {
     display: inline-block;
     color: white;
     text-align: right;
@@ -143,12 +144,12 @@ li > #sep {
     text-decoration: none;
   }
  
-  li a:hover, .dropdown:hover .dropbtn {
+li a:hover, .dropdown:hover .dropbtn {
     background-color:lightgrey;
     color: black;
   }
   
-  .dropdown a {
+.dropdown a {
     color: white;
     padding: 12px 16px;
     text-decoration: none;
@@ -156,20 +157,27 @@ li > #sep {
     text-align: right;
   }
   
-  .dropdown-content a:hover {background-color: #f1f1f1;}
-  
-  .dropdown:hover .dropdown-content {
+.dropdown-content a:hover {
+    background-color: #f1f1f1;}
+  }
+
+.dropdown:hover .dropdown-content {
     display: block;
   }
 
-  #top-box {
-    display: flex;
-    flex-wrap: nowrap;
-    margin-top: 30px;
-    display: block;
-}
+#top-box {
+   display: flex;
+   justify-content: space-between;
+   margin-top: 30px;
+   display: block;
+  }
 
-#top-box > .top-pic {
+.top-pic {
   width: 293px;
   height: 355px;
+  opacity: 0.8;
+}
+
+div {
+  text-align: center;
 }
