--- a/style.css
+++ b/style.css
@@ -17,6 +17,11 @@ body {
 5. drop down
 */
 
+h3 {
+  padding: 14px;
+  font-size: 0.75em;
+}
+
 #container {
   width: 900px;
   margin: 0 auto;
@@ -34,7 +39,6 @@ body {
 background: -moz-linear-gradient(top, #79757C 0%, #DCE0E0 100%);
 background: -webkit-linear-gradient(top, #79757C 0%, #DCE0E0 100%);
 background: linear-gradient(to bottom, #79757C 0%, #DCE0E0 100%);
-  z-index: 100;
 }
 
 .logo {
@@ -47,37 +51,45 @@ background: linear-gradient(to bottom, #79757C 0%, #DCE0E0 100%);
   background-image: url("images/images/paz_logo.png");
 }
 
-#home {
-  display: block;
+li#home {
+  display: inline-block;
   background-position: -17px top;
-  width: 100px;
-  position: absolute;
-  background-image: url(/images/images/menu_home.png) 
+  width: 20px;
+  background-image: url(/images/images/menu_home.png);
+  background-repeat: no-repeat;
+
 }
+
+div#langmenu {
+  margin-left: 25px;
+}
+
 
 .form-search {
   position: absolute;
   top: 20px;
   left: 10px;
-  width: 152px;
+  width: 160px;
+  margin-left: 45px;
+
 }
 form.search-box button {
-  margin-right: 10%;
+  /* margin-right: 10%; */
   padding: 5px;
   max-width: 25px;
   float: left;
   color: grey;
-  font-size: 14px;
+  font-size: 12px;
   cursor: pointer;
 }
 
 form.search-box input[type=text] {
-  padding: 10px;
-  font-size: 14px;
+  padding: 5px;
+  font-size: 12px;
   border: 1px solid grey;
   float: left;
-  width: 132px;
-  height: 30px;
+  width: 120px;
+  height: 27px;
   background: #f1f1f1;
 }
 
@@ -93,8 +105,9 @@ form.search-box::after {
 
 #langmenu {
   position: absolute;
-  top: 20px;
+  top: 27px;
   left: 180px;
+  font-size: 12px;
 }
 
 #mainMenu > ul {
@@ -109,21 +122,43 @@ form.search-box::after {
 
 
 li > #sep {
-  width: 4px;
+  width: 2px;
   height: 21px;
-  background-image: url(images/images/menu_sep.png) no-repeat 0 0px;
-  margin: 0 16px;
+  background-image: url(images/images/menu_sep.png);
+  margin: 0 12px;
+}
+
+.dropdown {
+  position: relative;
+}
+
+.dropdown > a {
+  color: white;
+  padding: 12px 16px;
+  text-decoration: none;
+  text-align: center;
 }
 
 .dropdown-content {
+  position: fixed;
   display: none;
   background-color: rgb(144, 144, 144);
   min-width: 150px;
   box-shadow: 0px 8px 8px 0px rgba(0,0,0,0.2);
-  z-index: 1;
+  z-index: 200;
 }
 
-  .dropdown-content a {
+/* .dropbtn {
+  display: inline-block;
+  padding: 14px;
+  text-decoration: none;
+} */
+
+.readMore-white {
+  background-image: url(/images/images/read_more_white.png) no-repeat 0 0px;
+  
+}
+  .dropdown-content > a {
     color: white;
     text-decoration: none;
     background-color: rgb(144, 144, 144);
@@ -131,34 +166,14 @@ li > #sep {
     display: block;
   }
 
-  li.dropdown {
-    display: inline-block;
-  }
+ /*
+.dropdown:hover .dropbtn {
+  background-color: rgb(144, 144, 144);
+}
+ */
 
-.dropbtn {
-    display: inline-block;
-    color: white;
-    text-align: right;
-    padding: 14px;
-    /* min-width: 150px; */
-    text-decoration: none;
-  }
- 
-li a:hover, .dropdown:hover .dropbtn {
-    background-color:lightgrey;
-    color: black;
-  }
-  
-.dropdown a {
-    color: white;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-    text-align: right;
-  }
-  
 .dropdown-content a:hover {
-    background-color: #f1f1f1;}
+  background-color: #f1f1f1;
   }
 
 .dropdown:hover .dropdown-content {
@@ -167,17 +182,84 @@ li a:hover, .dropdown:hover .dropbtn {
 
 #top-box {
    display: flex;
-   justify-content: space-between;
-   margin-top: 30px;
+   flex-direction: row;
    display: block;
+   align-items: center;
   }
 
-.top-pic {
-  width: 293px;
-  height: 355px;
-  opacity: 0.8;
+.top-wrap {
+  position: relative;
+  margin: 35px 10px;
+  display: inline-block;
+  width: 30%;
 }
 
-div {
-  text-align: center;
+.top-pic {
+  opacity: 0.75 ;
+  max-width: 270px;
+  border-bottom-right-radius: 10px;
+}
+
+.top-text {
+  position: absolute;
+  text-align: right;
+  bottom: 5%;
+  right: 5%;
+  background-color: rgba(0, 0, 0, 0.7);
+  border-bottom-right-radius: 10px;
+  color: #f1f1f1;
+  padding-top: 3%;
+  padding-right: 3%;
+  padding-bottom: 3%;
+  width: 95%;
+}
+
+#buttom-box {
+  display: flex;
+  flex-direction: row;
+  display: block;
+  align-items: center;
+ }
+
+.buttom-wrap {
+  position: relative;
+  margin: 35px 10px;
+  display: inline-block;
+  width: 30%;
+  height: 216px;
+  padding: 4px 10px 15px 10px;
+  border: 2px solid #ececec;
+  border-top-right-radius: 10px;
+  background-image: linear-gradient(to bottom,white, #ececec);
+
+}
+
+#buttom-box-header {
+  display: inline-block;
+}
+
+.buttom-pic {
+ width: 100%;
+ border-bottom-right-radius: 10px;
+ margin-bottom: 20px;
+}
+
+.buttom-map {
+  height:90%;
+  float: left;
+  border-bottom-right-radius: 10px;
+  margin-bottom: 20px;
+ }
+.buttom-text {
+ position: absolute;
+ text-align: right;
+ bottom: 5%;
+ right: 5%;
+ background-color: rgba(0, 0, 0, 0.7);
+ border-bottom-right-radius: 10px;
+ color: #f1f1f1;
+ padding-top: 3%;
+ padding-right: 3%;
+ padding-bottom: 3%;
+ width: 95%;
 }
