--- a/style.css
+++ b/style.css
@@ -32,8 +32,7 @@ h3 {
   width: 100%;
   height: 106px;
   font-weight: bold;
-  color: #005ca0;
-  /* height: 105px; */
+  font-size: 0.75em;
   position: relative;
   background: rgb(140, 140, 140);
 background: -moz-linear-gradient(top, #79757C 0%, #DCE0E0 100%);
@@ -54,7 +53,7 @@ background: linear-gradient(to bottom, #79757C 0%, #DCE0E0 100%);
 li#home {
   display: inline-block;
   background-position: -17px top;
-  width: 20px;
+  width: 100%;
   background-image: url(/images/images/menu_home.png);
   background-repeat: no-repeat;
 
@@ -135,11 +134,11 @@ form.search-box::after {
 .dropdown-content {
   position: fixed;
   display: none;
-  background-color: rgb(144, 144, 144);
-  min-width: 150px;
+  background: linear-gradient(to top, #79757C 0%, #DCE0E0 100%);
+  min-width: 120px;
   top: 104px
   box-shadow: 0px 8px 8px 0px rgba(0,0,0,0.2);
-  z-index: 200;
+  /* z-index: 100; */
 }
 
 /* .dropbtn {
